# Continual-CLIP

./: pyproject.toml
